--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="UTF-8">
     <title>Relatório</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
 <div id="capa" style="position: relative;background-color: black;height: 115px;color: white;font-size: xxx-large;"><center>Relatório</center></div>
