--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     
   </head>
   <body>
+    <form action="processa_formulario.php" method="post">
+  ...
+</form>
+
 <div id="capa" style="position: relative;background-color: black;height: 115px;color: white;font-size: xxx-large;"><center>Relatório</center></div>
 <center>
     <table style="position: relative;
-    top: 2px;
-">
+    top: 2px;">
 <tr style="background: darkgray;">
    <th>Professores</th><th>Mês<br><textarea id="m1" name="m1" rows="1" cols="10" wrap="soft"></textarea></th><th>Observações<th/>
 </tr>
