--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <table style="position: relative;
     top: 2px;">
 <tr style="background: darkgray;">
-   <th>Professores</th><th>Mês<br><textarea id="m1" name="m1" rows="1" cols="10" wrap="soft"></textarea></th><th>Observações<th/>
+   <th>Professores</th><th>Mês<br><textarea id="m1" name="m1" rows="1" cols="10" wrap="soft"></textarea></th><th>Ocorrências<th/>
 </tr>
 <tr>
 <td>
