--- a/outra_pagina.html
+++ b/outra_pagina.html
@@ -60,7 +60,7 @@ th, td {
       <div id="cab"><tr style="background: darkgrey;">
         <th>professores</th>
         <th><p id="m1"></p></th>
-        <th>Observações</th>
+        <th>Ocorrências</th>
       </tr></div>
       <tr>
     <td id="a1"></td>
